# agentlens-web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  constitution.md  pyproject.toml
agentlens/: __init__.py  config.py  db.py  models.py
agentlens/api/: deps.py  main.py  schemas.py
agentlens/clustering/: cluster.py  embed.py  labeling.py  purity.py
agentlens/corpus/: generator.py  scenarios.py
agentlens/dashboard/: __init__.py  app.py  data.py  ui.py
agentlens/evals/: checks.py  metrics.py  runner.py
agentlens/feedback/: __init__.py  calibration.py  compare.py  queue.py
agentlens/fixes/: __init__.py  propose.py  regression.py  report.py
agentlens/jobs/: __init__.py  _logging.py  compare_judge.py  freeze_golden.py  generate_corpus.py  judge_metrics.py  propose_fix.py  (+4 more)
frontend/: package-lock.json
tests/: conftest.py  test_app_shell.py  test_calibration.py  test_checks.py  test_cluster_models.py  test_clustering.py  test_compare.py  test_compare_judge_job.py  test_config.py  test_dashboard_data.py  test_dashboard_pages.py  test_embed.py  test_eval_models.py  test_fix_models.py  test_fix_regression_job.py  test_fix_report.py  test_freeze_golden_job.py  test_gateway.py  test_generate_corpus_job.py  test_generator.py  test_judge_prompt.py  test_labeling.py  test_metrics.py  test_models.py  test_prompts.py  test_propose.py  test_propose_fix_job.py  test_purity.py  test_queue.py  test_recluster_job.py  test_redact.py  test_regression.py  test_review_model.py  test_run_evals_job.py  test_runner.py  test_scenarios.py  test_verify_metrics_job.py
(+180 files in other folders)
