[project]
name = "agentlens"
version = "0.1.0"
description = "AI conversation quality and observability platform for healthcare voice agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.30",
    "structlog>=24.1",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.pytest.ini_options]
markers = [
    "llm: calls the real Anthropic API and costs money (excluded from the fast suite)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["agentlens"]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
